--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,9 +1,2 @@
-@import url("https://fonts.googleapis.com/css?family=Karla:weight@400;700&display=swap");
+@import "./css_base/base";
 
-$font: "Karla", sans-serif;
-$primary-color: #3e6f9e;
-
-body {
-    font-family: $font;
-    color: $primary-color;
-}
