--- a/src/assets/scss/layout/_modal.scss
+++ b/src/assets/scss/layout/_modal.scss
@@ -98,7 +98,7 @@ input[data-error]::after {
 .checkbox-label,
 .checkbox2-label {
     position: relative;
-    margin-left: 36px;
+    margin-left: 2rem;
     font-size: 12px;
     font-weight: normal;
 }
@@ -253,6 +253,10 @@ input[data-error]::after {
     background-color: rgba(0, 0, 0, 0.1);
 }
 /* custom select end */
+p.text-label{
+
+    padding: 0;
+}
 .text-label {
     font-weight: normal;
     font-size: 16px;
