--- a/src/assets/scss/layout/_form.scss
+++ b/src/assets/scss/layout/_form.scss
@@ -3,7 +3,7 @@ label {
     font-size: 1rem;
     font-weight: normal;
     display: inline-block;
-    margin: 1.5rem 0 1rem 0;
+    margin: 0 0 0.8rem 0;
 }
 input {
     padding: 8px;
@@ -115,5 +115,15 @@ p.text-label{
 .text-label {
     font-weight: normal;
     font-size: 16px;
-    margin: 1.5rem 0 0 0;
+    margin: 1rem 0 0 0;
+}
+
+// Messages d'erreurs
+.form-error{
+    visibility: hidden;
+    content: ' ';
+    color: #fe142f;
+    font-size: 0.9rem;
+    font-style: italic;
+    margin-top: 0.5rem;
 }
