--- a/src/assets/scss/layout/_form.scss
+++ b/src/assets/scss/layout/_form.scss
@@ -106,12 +106,14 @@ input[data-error]::after {
     left: 21%;
     top: 19%;
 }
-
+.tournament{
+    margin-top: 0.2rem;
+}
 
 p.text-label{
-
     padding: 0;
 }
+
 .text-label {
     font-weight: normal;
     font-size: 16px;
@@ -126,4 +128,9 @@ p.text-label{
     font-size: 0.9rem;
     font-style: italic;
     margin-top: 0.5rem;
+    margin-bottom: 0.2rem;
+    &--centered{
+        width: 100%;
+        text-align: center;
+    }
 }
