--- a/src/assets/scss/layout/_modal.scss
+++ b/src/assets/scss/layout/_modal.scss
@@ -1,6 +1,6 @@
 
 .bground {
-    display: block;
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -26,8 +26,12 @@
 }
 
 .modal-body {
-    padding: 15px 8%;
-    margin: 15px auto;
+    position: relative;
+    padding: 2rem 2rem 0 2rem;
+    margin: 0 auto;
+    overflow: hidden;
+    transition: 500ms left;
+    left: 0;
 }
 
 .button {
@@ -48,8 +52,17 @@
     font-size: 16px;
 }
 
-
-
+// If form is valid and submitted
+.modal-passed{
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    font-size: 1.8rem;
+    transition: 0.6s;
+}
 
 
 .close {
@@ -93,12 +106,15 @@
     cursor: pointer;
     border-color: transparent;
     width: 150px;
-    margin: 0 auto;
+    margin: 0 auto 2rem auto;
+    transition: 0.6s;
+
+
 
     &:hover{
         background: #3876ac;
     }
     @media screen and (max-width: 1300px) {
-        margin-top: 1rem;
+
     }
 }
