--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -20,7 +20,7 @@
     padding: 12px 12px;
     margin: 5px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1.2rem;
     font-family: Roboto, sans-serif;
 
     &:nth-child(-n+5):hover{
@@ -40,7 +40,6 @@
     }
     &:nth-child(5){
         margin-right: 0;
-        padding-right: 0;
     }
 }
 
